dataset1235/2025-2/610742602/users/4180041627/executions/2563853024_2935826613.log
== SUBMISSION (2025-09-02 20:27:16)
-- CODE: 
celsius = float(input("insira a temperatura em celcius"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
insira a temperatura em celcius32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
insira a temperatura em celcius428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
insira a temperatura em celcius105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
insira a temperatura em celcius50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
insira a temperatura em celcius54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
insira a temperatura em celcius104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:23:01)
-- CODE: 
celsius = tempc(input("insira a temperatura em celcius"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = tempc(input("insira a temperatura em celcius"))
              ^^^^^
NameError: name 'tempc' is not defined
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = tempc(input("insira a temperatura em celcius"))
              ^^^^^
NameError: name 'tempc' is not defined
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = tempc(input("insira a temperatura em celcius"))
              ^^^^^
NameError: name 'tempc' is not defined
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = tempc(input("insira a temperatura em celcius"))
              ^^^^^
NameError: name 'tempc' is not defined
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = tempc(input("insira a temperatura em celcius"))
              ^^^^^
NameError: name 'tempc' is not defined
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = tempc(input("insira a temperatura em celcius"))
              ^^^^^
NameError: name 'tempc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:27:11)
-- CODE: 
celsius = float(input("insira a temperatura em celcius"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
insira a temperatura em celcius32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
insira a temperatura em celcius428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
insira a temperatura em celcius105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
insira a temperatura em celcius50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
insira a temperatura em celcius54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
insira a temperatura em celcius104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
